helm/monitoring/faro-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faro-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /faro(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: alloy
                port:
                  number: 12347
