helm/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /prometheus
            pathType: Prefix

            backend:
              service:
                name: monitoring-kube-prometheus-prometheus

                port:
                  number: 9090
